30 March 2009: Wouter
	- Fixup LDFLAGS from libevent sourcedir compile configure restore.
	- Fixup so no non-absolute rpaths are added.

27 March 2009: Wouter
	- nicer -h output. report linked libraries and modules.
	- prints modules in intuitive order (config file friendly).
	- python compiles easily on BSD.

26 March 2009: Wouter
	- ignore swig varargs warnings with gcc.
	- remove duplicate example.conf text from python example configs.
	- outofdir compile fix for python.
	- pyunbound works.
	- print modules compiled in on -h. manpage.

25 March 2009: Wouter
	- initial import of the python contribution from Zdenek Vasicek and
	  Marek Vavrusa.
	- pythonmod in Makefile; changes to remove warnings/errors for 1.3.0.

24 March 2009: Wouter
	- more neat configure.ac. Removed duplicate config.h includes.
	- neater config.h.in.
	- iana portlist updated.
	- fix util/configlexer.c and solaris -std=c99 flag.
	- fix postcommit aclocal errors.
	- spaces stripped. Makefile cleaner, /usr omitted from -I, -L, -R.
	- swap order of host detect and libtool generation.

23 March 2009: Wouter
	- added launchd plist example file for MacOSX to contrib.
	- deprecation test for daemon(3).
	- moved common configure actions to m4 include, prettier Makefile.

20 March 2009: Wouter
	- bug #239: module-config entries order is important. Documented.
	- build fix for test asynclook.

19 March 2009: Wouter
	- winrc/README.txt dos-format text file.
	- iana portlist updated.
	- use _beginthreadex() when available (performs stack alignment).
	- defaults for windows baked into configure.ac (used if on mingw).

18 March 2009: Wouter
	- Added tests, unknown algorithms become insecure. fallback works.
	- Fix for and test for unknown algorithms in a trust anchor
	  definition.  Trust anchors with no supported algos are ignored.
	  This means a (higher)DS or DLV entry for them could succeed, and
	  otherwise they are treated as insecure.
	- domain-insecure: "example.com" statement added. Sets domain